# middleware/authMiddleware.js
@@ -1,5 +1,5 @@
-import jws from "jsonwebtoken";
-import user from "../models/user.js";
+import jwt from "jsonwebtoken";
+import User from "../models/user.js";
 
 export const protect = async (req, res, next) => {
   let token;
@@ -21,11 +21,14 @@ export const protect = async (req, res, next) => {
     }
 
     // verify token
-    const decode = JsonWebTokenError.verify(token, process.env.JWT_SECRET);
+    const decoded = jwt.verify(token, process.env.JWT_SECRET);
 
+
+
+    console.log(decoded);
     // fetch user without password
 
-    const user = await user.findById(decoded.id).select("-password");
+    const user = await User.findById(decoded.id).select("-password");
     if (!user) {
       return res.status(401).json({ message: "User not found, invalid token" });
     }
